[gd_scene load_steps=7 format=3 uid="uid://bjta7ifyqvo6h"]

[ext_resource type="Texture2D" uid="uid://cyneagg6gqolb" path="res://assets/door.png" id="1_0xr6b"]
[ext_resource type="Script" path="res://scenes/Items/door.gd" id="1_pl4qv"]
[ext_resource type="Script" path="res://components/interactable/interactable_component.gd" id="3_aii1r"]
[ext_resource type="Script" path="res://components/highlight_component/highlight_component.gd" id="4_grxnr"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="5_4c3ec"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ledqc"]
shader = ExtResource("5_4c3ec")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 30.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[node name="Door" type="Node2D"]
script = ExtResource("1_pl4qv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.18, 0.18)
texture = ExtResource("1_0xr6b")

[node name="InteractableComponent" type="Area2D" parent="." node_paths=PackedStringArray("highlighted_component")]
script = ExtResource("3_aii1r")
highlighted_component = NodePath("../HighlightComponent")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractableComponent"]
polygon = PackedVector2Array(-75, -36, 74, -133, 74, 44, -75, 139)

[node name="HighlightComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_grxnr")
sprite = NodePath("../Sprite2D")
shader_material = SubResource("ShaderMaterial_ledqc")

[connection signal="interacted" from="InteractableComponent" to="." method="_on_interactable_component_interacted"]
[connection signal="mouse_entered" from="InteractableComponent" to="InteractableComponent" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="InteractableComponent" to="InteractableComponent" method="_on_mouse_exited"]
